# ExpenseTracker

./: .gitignore  ProjectOutline.md  README.md  notes.md  portfolio transaction record.xlsx  pyproject.toml  reference.md  reference_link.md  requirements.txt
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
Demo/: .gitignore  pyproject.toml  start_app.py  uncomplete.md
Demo/backend/: app.py  expenses.db  requirements.txt
Demo/frontend/: expenses.db  streamlit_app.py
Demo/frontend/lib/: api.py  state.py
Demo/frontend/pages/: 1_Input.py  2_History.py  3_Dashboard.py  4_Settings.py  5_Portfolio.py
draft/FastAPI/: main.py  python_testing.py  test_main.py
draft/Multi-Page/: main.py
draft/streamlit auth/: streamlit_auth.py
frontend/: app.py
frontend/.ipynb_checkpoints/: app-checkpoint.py
frontend/streamlit_page/: ai_bookkeeper_page.py  transaction_history_page.py  user_setting_page.py
