[project]
name = "expensetrackertest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.124.4",
    "openai>=2.12.0",
    "openpyxl>=3.1.5",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.1",
    "uvicorn>=0.38.0",
]
